# scrooge

./: .gitignore  .travis.yml  BUILD.bazel  CHANGELOG  CHANGELOG.rst  CHANGES  CONTRIBUTING.md  CodeGenDep.html  CommandLine.html  Finagle.html  GeneratedCodeUsage.html  Linter.html  MVNPlugin.html  MigrationGuide.md  Namespaces.html  OWNERS  Ostrich.html  PROJECT.yml  README.md  SBTPlugin.html  Semantics.html  SwiftUserGuide.html  Symantics.html  TODO.md  ThriftValidation.html  build.sbt  build.xml  changelog.html  csl-sonatype.sbt.enc  genindex.html  index.html  license.html  params.json  pom.xml  pushsite.bash  sbt  scrooge  search.html  searchindex.js  settings.xml  (+2 more)
FinagleTestService/: ExampleException.ts  ExampleRequest.ts  ExampleResponse.ts  FinagleTestService.ts
_sources/: CodeGenDep.rst.txt  CodeGenDep.txt  CommandLine.rst.txt  CommandLine.txt  Finagle.rst.txt  Finagle.txt  GeneratedCodeUsage.rst.txt  Linter.rst.txt  Linter.txt  MVNPlugin.rst.txt  MVNPlugin.txt  Namespaces.rst.txt  Ostrich.txt  SBTPlugin.rst.txt  SBTPlugin.txt  Semantics.rst.txt  SwiftUserGuide.rst.txt  changelog.txt  index.rst.txt  index.txt
_static/: basic.css  bootstrap-sphinx.css
ant/: compile.xml  package.xml  package.xml.orig
ivy/: ivy.xml  ivysettings.xml
maven-scrooge/: pom.xml
maven-scrooge-plugin/: README.md  pom.xml
project/: Build.scala  ScroogeRunner.scala  build.properties  (+3 more)
scrooge-generator-tests/src/test/java/: BUILD  BUILD.bazel
scrooge-generator-tests/src/test/java/com/twitter/scrooge/finagle_integration/: JavaIntegrationFilterTest.java  JavaIntegrationTest.java
(+1267 files in other folders)
